kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cluster-apps-networking-traefik-add-ons-external-services-proxmox
subsets:
  - addresses:
      - ip: 192.168.1.7 #${PROXMOX_ADDR}
    ports:
      - name: https
        port: 8006
        protocol: TCP
