kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-apps-networking-traefik-add-ons-external-services-proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: https
  type: ClusterIP
