kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name proxmox
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`proxmox.${SECRET_DOMAIN}`)
      middlewares:
        - name: traefik-middleware-basic-auth
      services:
        - name: *name
          port: 8006
          namespace: default
          serversTransport: proxmox
  tls:
    secretName: cluster-secrets
